fix various layout issues

--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -330,6 +330,10 @@ body {
   width: 100%;
 }
 
+.image .stack-row img {
+  margin: 0;
+}
+
 .image {
   align-items: center;
   display: flex;
