--- a/assets/stylesheets/mobile.css
+++ b/assets/stylesheets/mobile.css
@@ -331,4 +331,8 @@
     padding-right: 16px;
     text-align: right;
   }
+  
+  video {
+    max-width: 100%;
+  }
 }
